[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Task.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/blue_boxCross.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/blue_sliderRight.png" type="Texture" id=3]
[ext_resource path="res://resources/styles/LineEdit.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.654902, 0.882353, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Task" type="Panel"]
margin_right = 432.0
margin_bottom = 77.0
rect_min_size = Vector2( 432, 66 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="TextureButton" parent="."]
margin_left = 3.47588
margin_top = 2.33018
margin_right = 19.4759
margin_bottom = 18.3302
hint_tooltip = "Delete task"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="TextureButton" parent="."]
margin_left = 20.2483
margin_top = 2.67772
margin_right = 36.2483
margin_bottom = 18.6777
hint_tooltip = "Task options
"
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MilestoneProgress" type="ProgressBar" parent="."]
visible = false
anchor_left = 0.495
anchor_right = 1.0
margin_left = 0.159988
margin_top = 5.0
margin_right = -8.0
margin_bottom = 33.0
hint_tooltip = "Milestone progress"
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
value = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="TextEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 25.6
margin_right = -3.0
margin_bottom = -3.0
custom_styles/read_only = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_styles/completion = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
wrap_enabled = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Option" to="." method="_on_Option_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
